--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
-    "start:dev": "nodemon"
+    "start:dev": "nodemon",
+    "build-run": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
