--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "node .",
-    "start:dev": "nodemon",
-    "build-run": "npm run build && npm run start"
+    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "start:dev": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +18,9 @@
     "@typescript-eslint/eslint-plugin": "^5.30.3",
     "@typescript-eslint/parser": "^5.30.3",
     "nodemon": "^2.0.18"
+  },
+  "dependencies": {
+    "cross-env": "^7.0.3",
+    "express": "^4.18.1"
   }
 }
