--- a/frontend/apache2-user-config.conf
+++ b/frontend/apache2-user-config.conf
@@ -1,14 +1,49 @@
+ServerName $CI_PROJECT_NAME.$CI_PROJECT_NAMESPACE.informatik.haw-hamburg.de
+
 <VirtualHost *:80>
-    ServerName $CI_PROJECT_NAME.$CI_PROJECT_NAMESPACE.informatik.haw-hamburg.de
     DocumentRoot /userdata/webportal
     <Directory /userdata/webportal>
-        AllowOverride All
-        Options -Indexes
-        Require all granted
+        AuthType Basic
+        AuthName "Restricted Content"
+        AuthUserFile /etc/apache2/.htpasswd
+        Require valid-user
     </Directory>
 </VirtualHost>
 
-#<VirtualHost *:443>
-#   ServerName $CI_PROJECT_NAME.$CI_PROJECT_NAMESPACE.informatik.haw-hamburg.de
-#   rtfm ... ¯\_(ツ)_/¯
-#</VirtualHost>
+<VirtualHost *:443>
+    DocumentRoot /userdata/webportal
+    <Directory /userdata/webportal>
+        SSLRequireSSL
+        Require all granted
+    </Directory>
+
+    SSLVerifyClient require
+    SSLVerifyDepth 2
+    SSLOptions +StrictRequire +StdEnvVars
+    RequestHeader set X-Forwarded-User %{SSL_CLIENT_S_DN_CN}e
+    RequestHeader set X-Forwarded-Subject %{SSL_CLIENT_S_DN}e
+
+    ProxyPass /secure http://172.17.0.3:8081/secure
+
+    SSLEngine on
+    SSLCertificateFile      /userdata/certs/svs23.pem
+    SSLCertificateKeyFile /userdata/certs/leaf.key
+    SSLCertificateChainFile /userdata/certs/svs23.pem
+
+    SSLCADNRequestFile /userdata/certs/svs23-user.pem
+    SSLCACertificateFile /userdata/certs/svs23.pem
+
+    # enable HTTP/2, if available
+    Protocols h2 http/1.1
+
+    # HTTP Strict Transport Security (mod_headers is required) (63072000 seconds)
+    Header always set Strict-Transport-Security "max-age=63072000"
+</VirtualHost>
+
+SSLProtocol             all -SSLv3 -TLSv1 -TLSv1.1
+SSLCipherSuite          ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384
+SSLHonorCipherOrder     off
+SSLSessionTickets       off
+
+SSLUseStapling On
+SSLStaplingCache "shmcb:logs/ssl_stapling(32768)"
